--- a/index.html
+++ b/index.html
@@ -11,11 +11,16 @@
     <!-- fastproject CSS -->
     <link rel="stylesheet" href="public/css/fastproject.css">
 
+    <link rel="shortcut icon" href="https://png.icons8.com/dotty/20/324087/speedometer.png" type="image/x-icon" />
+
     <title>fastproject</title>
   </head>
   <body>
-    <nav class="navbar navbar-expand-lg navbar-dark fastproject-bg-purple">
-        <a class="navbar-brand" href="#">fastproject</a>
+    <nav class="navbar navbar-expand-lg fixed-top navbar-dark fastproject-bg-purple">
+        <a class="navbar-brand" href="#">
+            <img src="https://png.icons8.com/dotty/32/ffffff/speedometer.png">
+          fastproject
+        </a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
@@ -26,21 +31,23 @@
               <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Link</a>
+              <a class="nav-link" href="#purpose">Purpose</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#differential">Differential</a>
+            </li>
+            <li>
+              <a class="nav-link" href="#depositions">Depositions</a>
             </li>
             <li class="nav-item dropdown">
               <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                Dropdown
+                Social
               </a>
               <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                <a class="dropdown-item" href="#">Action</a>
-                <a class="dropdown-item" href="#">Another action</a>
-                <div class="dropdown-divider"></div>
-                <a class="dropdown-item" href="#">Something else here</a>
+                <a class="dropdown-item" href="https://www.facebook.com/" target="_blank">Facebook</a>
+                <a class="dropdown-item" href="https://twitter.com/" target="_blank">Twitter</a>
+                <a class="dropdown-item" href="https://www.instagram.com/" target="_blank">Instagram</a>
               </div>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link disabled" href="#">Disabled</a>
             </li>
           </ul>
           <form class="form-inline my-2 my-lg-0">
@@ -50,9 +57,133 @@
         </div>
     </nav>
 
-    <div>
-      <img class="img-fluid" src="public/imgs/img-banner-top.jpg">
+    <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+      <ol class="carousel-indicators">
+        <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+        <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+        <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+      </ol>
+      <div class="carousel-inner">
+        <div class="carousel-item active">
+          <img class="d-block w-100" src="public/imgs/carousel-img-1.jpg" alt="First slide">
+        </div>
+        <div class="carousel-item">
+          <img class="d-block w-100" src="public/imgs/carousel-img-2.jpg" alt="Second slide">
+        </div>
+        <div class="carousel-item">
+          <img class="d-block w-100" src="public/imgs/carousel-img-3.jpg" alt="Third slide">
+        </div>
+      </div>
+      <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        <span class="sr-only">Previous</span>
+      </a>
+      <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        <span class="sr-only">Next</span>
+      </a>
     </div>
+
+    <div id="purpose" class="fastproject-bg-blue text-white py-5">
+      <div class="container">
+        <h1 class="display-4 text-center py-3">Let's change the world</h1>
+        
+        <div class="row">
+          <div class="col-md-4">
+            <img class="rounded" width="100%" src="public/imgs/what-a-wonderful-world.png">
+          </div>
+  
+          <div class="col-md-8 py-4">
+            <p class="lead text-justify">
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+            </p>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <div id="differential" class="fastproject-bg-white py-5">
+      <div class="container">
+        <h1 class="display-4 text-center py-3">Why choose us?</h1>
+  
+        <div class="row">
+          <div class="col-md-4">
+            <div class="card mx-auto" style="width: 18rem;">
+              <img class="card-img-top" src="https://png.icons8.com/dotty/400/324087/idea-sharing.png" alt="Card image cap">
+              <div class="card-body">
+                <h5 class="card-title">Ideas</h5>
+                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                <a href="#" class="btn btn-success">Go somewhere</a>
+              </div>
+            </div>
+          </div>
+  
+          <div class="col-md-4">
+            <div class="card mx-auto" style="width: 18rem;">
+              <img class="card-img-top" src="https://png.icons8.com/dotty/400/324087/robot.png" alt="Card image cap">
+              <div class="card-body">
+                <h5 class="card-title">Tech</h5>
+                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                <a href="#" class="btn btn-success">Go somewhere</a>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-md-4">
+            <div class="card mx-auto" style="width: 18rem;">
+              <img class="card-img-top" src="https://png.icons8.com/dotty/400/324087/goal.png" alt="Card image cap">
+              <div class="card-body">
+                <h5 class="card-title">Purpose</h5>
+                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                <a href="#" class="btn btn-success">Go somewhere</a>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <div class="fastproject-bg-purple text-white py-5">
+      <div class="container">        
+        <div class="row">
+          <div class="col-md-4 mr-auto text-center">
+            <h3>Location</h3>
+            <p class="lead">
+                1024 Lorem Ipsum street
+            </p>
+          </div>
+
+          <div class="col-md-4 ml-auto">
+            <ul class="list-inline">
+              <li class="list-inline-item">
+                <a href="https://icons8.com" target="_blank">
+                  <img src="https://png.icons8.com/ios-glyphs/50/F5F0F2/icons8-logo.png" alt="Icon pack by Icons8">
+                </a>
+              </li>
+              <li class="list-inline-item">
+                <a href="https://www.facebook.com" target="_blank">
+                  <img src="https://png.icons8.com/ios-glyphs/50/F5F0F2/facebook.png" alt="Facebook icon">
+                </a>
+              </li>
+              <li class="list-inline-item">
+                <a href="https://www.twitter.com" target="_blank">
+                  <img src="https://png.icons8.com/ios-glyphs/50/F5F0F2/twitter.png" alt="Twitter icon">
+                </a>
+              </li>
+              <li class="list-inline-item">
+                <a href="https://www.instagram.com">
+                  <img src="https://png.icons8.com/ios-glyphs/50/F5F0F2/instagram-new.png" alt="Instagram icon">
+                </a>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <footer class="fastproject-bg-grey py-4">
+      <p class="text-center">MIT License | fastproject 2018</p>
+    </footer>
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
