--- a/index.html
+++ b/index.html
@@ -39,9 +39,6 @@
             <li class="nav-item">
               <a class="nav-link" href="#differential">Differential</a>
             </li>
-            <li>
-              <a class="nav-link" href="#depositions">Depositions</a>
-            </li>
             <li class="nav-item dropdown">
               <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                 Social
@@ -70,12 +67,23 @@
       <div class="carousel-inner">
         <div class="carousel-item active">
           <img class="d-block w-100" src="imgs/carousel-img-1.jpg" alt="First slide">
+          <div class="carousel-caption fastproject-carousel-text">
+            <button type="button" class="btn fastproject-btn-primary p-3">Contact us</button>
+          </div>
         </div>
+        
         <div class="carousel-item">
           <img class="d-block w-100" src="imgs/carousel-img-2.jpg" alt="Second slide">
+          <div class="carousel-caption">
+            <button type="button" class="btn fastproject-btn-primary p-3">Business</button>
+          </div>
         </div>
+      
         <div class="carousel-item">
           <img class="d-block w-100" src="imgs/carousel-img-3.jpg" alt="Third slide">
+          <div class="carousel-caption">
+            <button type="button" class="btn fastproject-btn-primary p-3">Change the world</button>
+          </div>
         </div>
       </div>
       <a class="carousel-control-prev" href="#mainCarousel" role="button" data-slide="prev">
@@ -117,7 +125,7 @@
               <div class="card-body">
                 <h5 class="card-title">Ideas</h5>
                 <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                <a href="#" class="btn btn-success">Go somewhere</a>
+                <a href="#" class="btn fastproject-btn-primary">Go somewhere</a>
               </div>
             </div>
           </div>
@@ -128,7 +136,7 @@
               <div class="card-body">
                 <h5 class="card-title">Tech</h5>
                 <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                <a href="#" class="btn btn-success">Go somewhere</a>
+                <a href="#" class="btn fastproject-btn-primary">Go somewhere</a>
               </div>
             </div>
           </div>
@@ -139,7 +147,7 @@
               <div class="card-body">
                 <h5 class="card-title">Purpose</h5>
                 <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                <a href="#" class="btn btn-success">Go somewhere</a>
+                <a href="#" class="btn fastproject-btn-primary">Go somewhere</a>
               </div>
             </div>
           </div>
@@ -157,7 +165,7 @@
             </p>
           </div>
 
-          <div class="col-md-4 ml-auto">
+          <div class="col-md-4 ml-auto text-center">
             <ul class="list-inline">
               <li class="list-inline-item">
                 <a href="https://icons8.com" target="_blank">
