--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
               <div class="card-body">
                 <h5 class="card-title">Ideas</h5>
                 <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                <a href="#" class="btn fastproject-btn-primary">Go somewhere</a>
+                <button type="button" class="btn fastproject-btn-primary" data-toggle="modal" data-target="#exampleModal">Go somewhere</button>
               </div>
             </div>
           </div>
@@ -136,7 +136,7 @@
               <div class="card-body">
                 <h5 class="card-title">Tech</h5>
                 <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                <a href="#" class="btn fastproject-btn-primary">Go somewhere</a>
+                <button href="button" class="btn fastproject-btn-primary" data-toggle="modal" data-target="#exampleModal">Go somewhere</button>
               </div>
             </div>
           </div>
@@ -147,7 +147,7 @@
               <div class="card-body">
                 <h5 class="card-title">Purpose</h5>
                 <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                <a href="#" class="btn fastproject-btn-primary">Go somewhere</a>
+                <button href="button" class="btn fastproject-btn-primary" data-toggle="modal" data-target="#exampleModal">Go somewhere</button>
               </div>
             </div>
           </div>
@@ -193,7 +193,7 @@
       </div>
     </div>
 
-    <footer class="fastproject-bg-grey py-4">
+    <footer class="fastproject-bg-grey py-2">
       <p class="text-center">MIT License | fastproject 2018</p>
     </footer>
 
@@ -202,6 +202,27 @@
     <script src="vendor/jquery/dist/jquery.slim.min.js"></script>
     <script src="vendor/popper.js/dist/umd/popper.min.js"></script>
     <script src="vendor/bootstrap/dist/js/bootstrap.min.js"></script>
+
+    <!-- Modals -->
+    <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+      <div class="modal-dialog" role="document">
+        <div class="modal-content fastproject-bg-white">
+          <div class="modal-header">
+            <h5 class="modal-title" id="exampleModalLabel">Modal title</h5>
+            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+              <span aria-hidden="true">&times;</span>
+            </button>
+          </div>
+          <div class="modal-body">
+            ...
+          </div>
+          <div class="modal-footer">
+            <button type="button" class="btn btn-danger" data-dismiss="modal">Close</button>
+            <button type="button" class="btn fastproject-btn-primary">Save changes</button>
+          </div>
+        </div>
+      </div>
+    </div>
 
   </body>
 </html>
